# flask_restaurant

./: .gitignore  pyproject.toml  restaurant.py  restaurant_db.py
static/css/: style.css
static/js/: chat.js  coords.js  menu-admin-filter.js  menu-filter.js  nav.js  orders-filter.js  preview.js  register.js  reservation.js
templates/: _chat.html  add_position.html  base.html  basket.html  check_menu.html  create_order.html  home.html  login.html  manage_orders.html  menu.html  my_order.html  my_orders.html  position.html  register.html  reservations_check.html  reserved.html
