[project]
name = "flask-restaurant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "flask-caching>=2.3.1",
    "flask-login>=0.6.3",
    "flask-session>=0.8.0",
    "flask-wtf>=1.2.2",
    "geopy>=2.4.1",
    "psycopg2>=2.9.11",
    "pydantic-ai>=1.68.0",
    "sqlalchemy>=2.0.48",
]
